--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <a href="https://www.facebook.com/mohitsingh45983/"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter-square"></i></a>
                         <a href="https://www.instagram.com/mohitsingh45983/"><i class="fab fa-instagram"></i></a>
-                        <a href="www.linkedin.com/in/mohit-singh-9317b4290"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/mohit-singh-9317b4290/"><i class="fab fa-linkedin"></i></a>
                     </div>
                     <a href="images/Resume (2).pdf" download class="btn btn2" >Download Resume</a>
                 </div>
